[gd_scene load_steps=4 format=3 uid="uid://d0njyr04u3c3d"]

[ext_resource type="Script" path="res://src/Canvas/Scripts/top_canvas.gd" id="1_08pqv"]
[ext_resource type="Script" path="res://src/Canvas/Scripts/camera.gd" id="2_6oosl"]
[ext_resource type="Script" path="res://src/Canvas/Scripts/draw_observer.gd" id="3_guwvn"]

[node name="TopCanvas" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
script = ExtResource("1_08pqv")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera" type="Camera2D" parent="SubViewport"]
script = ExtResource("2_6oosl")

[node name="BottomCanvas" type="SubViewportContainer" parent="SubViewport"]
offset_right = 40.0
offset_bottom = 40.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewport/BottomCanvas"]
disable_3d = true
handle_input_locally = false
size = Vector2i(40, 40)
render_target_update_mode = 4

[node name="ColorRect" type="ColorRect" parent="SubViewport/BottomCanvas/SubViewport"]
offset_right = 512.0
offset_bottom = 512.0

[node name="CleanedImage" type="TextureRect" parent="SubViewport/BottomCanvas/SubViewport"]
offset_right = 40.0
offset_bottom = 40.0

[node name="DrawObserver" type="Control" parent="SubViewport/BottomCanvas/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_guwvn")

[node name="Bubbles" type="Node" parent="SubViewport/BottomCanvas/SubViewport"]

[node name="RawImage" type="TextureRect" parent="SubViewport/BottomCanvas/SubViewport"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
